# NLP

./: basic_text_cleaning.py  main.py  nltk_tokenize.py  pyproject.toml  regex_extraction.py  spacy_tokenize.py  task1_clean_text.py  task1_pos_tagging.py  task2_NER.py  task2_tokenize.py  task3_dependency_parsing.py  task3_stemming_lemmatization.py  task4_Word2vec.py  task4_vocabulary_size.py  task5_fastText.py  task5_tf_idf.py  task6_top10_keywords.py  train_fasttext.txt
