[project]
name = "nlpwithuv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "en-core-web-sm",
    "nltk>=3.9.2",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
